Update doc site description during build (#60)
* #site_description-start in mkdocs.yml

* Fix Mega-Linter

* [Mega-Linter] Apply linters fixes

* Fix nav

* Tables with full width

* Update mega-linter.yml template

* Fix CSS

* do not lint css with scss-lint

Co-authored-by: nvuillam <nvuillam@users.noreply.github.com>

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,3 +1,4 @@
+/* stylelint-disable SelectorFormat */
 .megalinter-banner {
   height: 50px;
   max-height: 150px;
@@ -11,4 +12,12 @@
 .megalinter-icon {
   max-height: 32px;
   max-width: 32px;
+}
+
+.md-typeset__table {
+  min-width: 100%;
+}
+
+.md-typeset table:not([class]) {
+  display: table;
 }
